--- a/stylesheet.css
+++ b/stylesheet.css
@@ -123,3 +123,26 @@ a {
     width: 100%;
   }
 }
+
+@media (max-width: 1055px) {
+  .desc {
+    float: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .header {
+    background-image: none;
+  }
+  .header-ul {
+    display: none;
+  }
+  .gif {
+    display: none;
+  }
+  .descr {
+    font-size: 1.25em;
+  }
+}
