--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,7 +102,7 @@ a {
 }
 
 .desc .about-me {
-  color: black;
+  color: #5f5f5f;
   margin: 0 10px;
   font-size: 1.5em;
 }
@@ -145,6 +145,9 @@ a {
   .descr {
     font-size: 1.25em;
   }
+  .title {
+    font-size: 2em;
+  }
 }
 
 .download {
@@ -154,7 +157,6 @@ a {
 }
 
 .in {
-  margin: 0 350px;
   line-height: 100px;
 }
 
