--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,8 +156,22 @@ a {
   align-items: center;
 }
 
+.download-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #008090;
+  margin: 5px;
+}
+
+.download-wrapper:hover {
+  background-color: lightblue;
+}
+
 .in {
+  color: white;
   line-height: 100px;
+  font-size: 2em;
 }
 
 .download-icon {
