updated bg header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,7 @@ a {
 .about {
   margin: 30px 5px;
   border-top: 10px;
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .dp {
@@ -92,6 +92,7 @@ a {
   float: left;
   width: 80%;
   margin-left: 2%;
+  overflow: hidden;
 }
 
 .title {
