--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,6 +107,44 @@ a {
   margin: 0 10px;
   font-size: 1.5em;
 }
+.download {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.download-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: whitesmoke;
+  margin: 2px;
+}
+
+.download-wrapper:hover {
+  background-color: white;
+}
+
+.in {
+  line-height: 100px;
+  font-size: 2em;
+}
+
+.download-icon {
+  width: 100px;
+  height: 100px;
+}
+
+.contact .title {
+  font-size: 2em;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.icon {
+  width: auto;
+  height: 50px;
+}
 
 @media (max-width: 1676px) {
   .about {
@@ -149,32 +187,8 @@ a {
   .title {
     font-size: 2em;
   }
-}
-
-.download {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.download-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: whitesmoke;
-  margin: 2px;
-}
-
-.download-wrapper:hover {
-  background-color: white;
-}
-
-.in {
-  line-height: 100px;
-  font-size: 2em;
-}
-
-.download-icon {
-  width: 100px;
-  height: 100px;
+  .icon {
+    width: auto;
+    height: 40px;
+  }
 }
