--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ button {
   background: url("./assets/clouds.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 30vh;
+  height: 35vh;
   margin: 0 5px;
   color: white;
 }
@@ -69,7 +69,7 @@ nav {
 }
 main {
   margin: 0 5px;
-  min-height: 69vh;
+  min-height: 64vh;
 }
 
 .about-me {
@@ -123,7 +123,7 @@ main {
   }
 
   main {
-    height: 79vh;
+    height: 74vh;
   }
 
   .intro-text h1,
@@ -138,6 +138,12 @@ main {
   }
   .my-pic {
     margin: 10px;
+  }
+  .about-me-details h1 {
+    margin-top: 0;
+  }
+  .about-me-details p {
+    font-size: 18px;
   }
 }
 
