--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,8 +59,8 @@ nav {
 
 .intro-text h1 {
   flex: 1 1 auto;
-  font-family: "Ubuntu", sans-serif;
   font-size: 50px;
+  font-weight: 500;
   letter-spacing: 5px;
 }
 .introduction p {
@@ -110,16 +110,46 @@ main {
   letter-spacing: 2px;
   color: #838383;
 }
+
+.resume-wrapper {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  margin: 20px auto;
+}
+
+.resume-wrapper h1 {
+  background-color: lightblue;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+.resume-wrapper img {
+  margin: 10px;
+  height: 80px;
+  width: 80px;
+}
+
 @media screen and (max-width: 1030px) {
   .about-me {
     width: 90%;
     margin: 0 5px;
+  }
+
+  .resume-wrapper h1 {
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 905px) {
   nav {
     display: none;
+  }
+  .resume-wrapper {
+    width: 50%;
   }
   .about-me {
     width: 90%;
@@ -128,6 +158,7 @@ main {
 
   .header {
     height: 20vh;
+
     background: none;
     background-color: rgb(64, 176, 189);
   }
@@ -136,8 +167,12 @@ main {
     height: 74vh;
   }
 
+  .introduction {
+    flex: 1 1 auto;
+  }
+
   .intro-text h1,
-  p {
+  .intro-text p {
     margin-top: 5px;
     flex: 1 1 auto;
   }
@@ -161,8 +196,24 @@ main {
   }
 }
 
+@media screen and (max-width: 658px) {
+  .resume-wrapper {
+    width: 90%;
+  }
+}
+
 @media screen and (max-width: 474px) {
   .about-me-details p {
     text-align: start;
+  }
+}
+
+@media screen and (max-width: 356px) {
+  .introduction {
+    height: fit-content;
+  }
+  .intro-text h1 {
+    font-size: 30px;
+    height: fit-content;
   }
 }
