--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,10 +120,15 @@ main {
   margin: 20px auto;
 }
 
+.resume-wrapper {
+  margin-top: 50px;
+}
+
 .resume-wrapper h1 {
   background-color: lightblue;
   width: 100%;
   height: 50px;
+
   text-align: center;
   line-height: 50px;
 }
