--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  margin: 0 5px;
+  margin: 0px 5px;
 }
 
 button {
@@ -118,13 +118,16 @@ main {
   align-items: center;
   width: 30%;
   margin: 20px auto;
+  opacity: 0.8;
 }
 
-.resume-wrapper {
-  margin-top: 50px;
+.resume-wrapper:hover {
+  opacity: 1;
 }
 
 .resume-wrapper h1 {
+  font-size: 30px;
+
   background-color: lightblue;
   width: 100%;
   height: 50px;
@@ -136,6 +139,65 @@ main {
   margin: 10px;
   height: 80px;
   width: 80px;
+}
+
+#contact {
+  margin: 20px;
+}
+
+.contact-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.contact-wrapper p {
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+.icon {
+  width: auto;
+  height: 50px;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media screen and (max-width: 1030px) {
@@ -174,6 +236,7 @@ main {
 
   .introduction {
     flex: 1 1 auto;
+    height: fit-content;
   }
 
   .intro-text h1,
@@ -203,7 +266,7 @@ main {
 
 @media screen and (max-width: 658px) {
   .resume-wrapper {
-    width: 90%;
+    width: 50%;
   }
 }
 
@@ -211,14 +274,18 @@ main {
   .about-me-details p {
     text-align: start;
   }
+  .resume-wrapper {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 364px) {
-  .introduction {
+  .intro-text h1 {
+    font-size: 35px;
     height: fit-content;
   }
-  .intro-text h1 {
-    font-size: 30px;
+  .intro-text p {
+    font-size: 18px;
     height: fit-content;
   }
 }
