--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,6 +38,9 @@ nav {
   padding: 10px;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom: 2px solid;
+  border-image-source: linear-gradient(to right, #654ea3, rgb(251, 221, 123));
+  border-image-slice: 1;
 }
 
 .nav-link {
@@ -46,8 +49,10 @@ nav {
 
 .nav-link:hover {
   text-decoration: underline;
-  text-decoration-color: white;
   text-underline-offset: 10px;
+  text-decoration-color: rgba(234, 175, 200, 1);
+
+  animation: fade-in-underline ease 0.5s;
 }
 
 .introduction {
@@ -66,12 +71,14 @@ nav {
   font-weight: 500;
   letter-spacing: 5px;
   text-shadow: 2px 2px 10px black;
+  animation: fade-in-img ease-in 0.75s;
 }
 .introduction p {
   flex: 1 1 auto;
   font-size: 25px;
   font-weight: 400;
   text-shadow: 2px 2px 10px black;
+  animation: fade-in-img ease-in 0.75s;
 }
 main {
   min-height: 49vh;
@@ -99,7 +106,6 @@ main {
   width: auto;
   height: 100%;
   margin-left: -20px;
-  animation: fade-in-img ease-in 0.75s;
 }
 
 .about-me-details {
@@ -123,31 +129,35 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 30%;
   margin: 50px auto;
   opacity: 1;
+  animation: fade-in-img ease-in 0.75s;
+  height: 25vh;
 }
 
 .resume-wrapper:hover {
   opacity: 0.8;
 }
-
-.resume-wrapper h1 {
+.resume-wrapper .card-header {
+  background-color: #01579b;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.resume-wrapper .card-header h1 {
   font-size: 25px;
   letter-spacing: 3px;
-
   background-color: #01579b;
-  width: 100%;
-  height: 50px;
   color: white;
-
-  text-align: center;
-  line-height: 50px;
 }
 .resume-wrapper img {
   margin: 10px;
-  height: 80px;
-  width: 80px;
+  height: 100px;
+  width: 100px;
 }
 
 #contact {
@@ -215,6 +225,10 @@ main {
     margin: 0px auto;
   }
 
+  .resume-wrapper {
+    width: 50%;
+  }
+
   .resume-wrapper h1 {
     font-size: 20px;
   }
@@ -225,7 +239,7 @@ main {
     display: none;
   }
   .resume-wrapper {
-    width: 50%;
+    width: 60%;
   }
   .about-me {
     width: 100%;
@@ -277,7 +291,7 @@ main {
 
 @media screen and (max-width: 658px) {
   .resume-wrapper {
-    width: 50%;
+    width: 65%;
   }
 }
 
@@ -326,6 +340,15 @@ main {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fade-in-underline {
+  0% {
+    text-decoration-color: rgba(234, 175, 200, 0);
+  }
+  100% {
+    text-decoration-color: rgba(234, 175, 200, 1);
   }
 }
 
