--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,7 @@ button {
   background: url("./assets/Wide-Minimalistic-Landscape-3840x1080-wallpaper.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: top center;
   height: 50vh;
   color: white;
 }
