--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ button {
   top: 0;
   left: 0;
   height: 100%;
-  width: 100%;
+  width: 0%;
   background-color: orange;
   opacity: 0.1;
   z-index: -1;
@@ -79,15 +79,29 @@ nav {
   align-items: center;
   height: 100%;
 }
-
-.intro-text h1 {
+.intro-text div {
   flex: 1 1 auto;
+}
+.intro-text div h1 {
   font-size: 50px;
   font-weight: 500;
   letter-spacing: 5px;
-  text-shadow: 2px 2px 10px black;
-  animation: fade-in-img ease-in 0.75s;
+  position: relative;
+  color: transparent;
+  animation: text-reveal 1s ease forwards;
+  animation-delay: 1.5s;
 }
+.intro-text h1 span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0%;
+  background-color: orange;
+  animation: text-reveal-box 1s ease;
+  animation-delay: 1s;
+}
+
 .introduction p {
   flex: 1 1 auto;
   font-size: 25px;
@@ -390,5 +404,26 @@ main {
   to {
     bottom: 0;
     opacity: 0;
+  }
+}
+
+@keyframes text-reveal-box {
+  50% {
+    width: 100%;
+    left: 0;
+    background-color: rgb(251, 221, 123);
+  }
+
+  100% {
+    width: 0;
+    left: 100%;
+    background-color: #654ea3;
+  }
+}
+
+@keyframes text-reveal {
+  100% {
+    text-shadow: 2px 2px 10px black;
+    color: white;
   }
 }
