--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ nav {
   animation: text-reveal 0.5s ease forwards;
   animation-delay: 1.5s;
 }
-.intro-text h1 span {
+.intro-text div h1 span {
   position: absolute;
   top: 0;
   left: 0;
@@ -263,7 +263,7 @@ main {
 @media screen and (max-width: 1030px) {
   .about-me {
     width: 95%;
-    margin: 0px auto;
+    margin: 50px auto;
   }
 
   .resume-wrapper {
@@ -284,7 +284,7 @@ main {
   }
   .about-me {
     width: 100%;
-    margin: 0 auto;
+    margin: 25px auto;
   }
 
   .header {
@@ -305,8 +305,8 @@ main {
     height: fit-content;
   }
 
-  .intro-text h1,
-  .intro-text p {
+  .intro-text div h1,
+  .intro-text div p {
     margin-top: 5px;
     flex: 1 1 auto;
   }
@@ -349,7 +349,7 @@ main {
   .intro-text {
     margin-top: 20px;
   }
-  .intro-text h1 {
+  .intro-text div h1 {
     font-size: 35px;
     height: fit-content;
   }
