--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,10 +206,25 @@ main {
 #projects .projects {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 25px auto;
+  flex-direction: column;
+  text-align: center;
+}
+#projects .project-header {
+  margin-top: 0px;
+}
+
+#projects h1 {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+#projects .project-item-wrapper {
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 50px auto;
-  flex-direction: row;
 }
 
 #projects .project-item {
@@ -239,6 +254,10 @@ main {
   color: white;
 }
 
+#projects p {
+  text-align: left;
+}
+
 /* #projects .project-item::after {
   position: absolute;
   top: 0;
@@ -252,13 +271,13 @@ main {
 } */
 
 #projects h2 {
-  font-size: 20px;
+  font-size: 30px;
   opacity: 1;
 }
 
 #projects p {
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 17px;
+  line-height: 23px;
   letter-spacing: 1.5px;
 }
 
