--- a/stylesheet.css
+++ b/stylesheet.css
@@ -204,7 +204,7 @@ main {
 /* Projects start */
 
 #projects .projects {
-  min-height: 100vh;
+  min-height: 95vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -217,8 +217,8 @@ main {
 }
 
 #projects h1 {
-  font-size: 30px;
-  text-transform: uppercase;
+  font-size: 40px;
+  text-transform: capitalize;
   margin-bottom: 20px;
 }
 #projects .project-item-wrapper {
@@ -230,6 +230,8 @@ main {
 #projects .project-item {
   flex-basis: 80%;
   max-width: 612px;
+  min-height: 380px;
+
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -271,11 +273,13 @@ main {
 } */
 
 #projects h2 {
-  font-size: 30px;
-  opacity: 1;
+  font-size: 28px;
+  text-transform: capitalize;
+  margin-bottom: 15px;
 }
 
 #projects p {
+  margin-bottom: 20px;
   font-size: 17px;
   line-height: 23px;
   letter-spacing: 1.5px;
