--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,14 +179,21 @@ main {
   border: 1px solid #01579b;
   margin: 50px auto;
 }
+
 #resume .resume-title {
   width: 100%;
   height: 100%;
+  opacity: 0.9;
+}
+
+#resume .resume-title:hover {
+  opacity: 1;
 }
 #resume h1 {
   font-size: 25px;
   letter-spacing: 3px;
   background-color: #01579b;
+
   color: white;
   text-align: center;
   padding: 20px 0px;
