--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-  height: 50vh;
+  height: 40vh;
   color: white;
   z-index: 1;
   position: relative;
@@ -49,7 +49,8 @@ nav {
 .nav-links {
   display: flex;
   list-style: none;
-  width: 30%;
+  flex-basis: 50%;
+  max-width: 500px;
   margin: 0 auto;
   padding: 10px;
   justify-content: space-evenly;
@@ -224,6 +225,7 @@ main {
   font-size: 40px;
   text-transform: capitalize;
   margin-bottom: 20px;
+  letter-spacing: 1.5px;
 }
 #projects .project-item-wrapper {
   display: flex;
@@ -358,16 +360,13 @@ main {
 }
 
 @media screen and (max-width: 1020px) {
-  nav {
-    display: none;
-  }
   .about-me {
     width: 100%;
     margin: 25px auto;
   }
 
   .header {
-    height: 40vh;
+    height: 30vh;
     background-size: cover;
     background-position: center;
     /* 
@@ -416,11 +415,14 @@ main {
 }
 
 @media screen and (max-width: 364px) {
+  .nav-links {
+    font-size: 10px;
+  }
   .intro-text {
     margin-top: 20px;
   }
   .intro-text div h1 {
-    font-size: 35px;
+    font-size: 30px;
     height: fit-content;
   }
   .intro-text p {
