added button styling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -368,6 +368,21 @@ nav {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+.contact-form-wrapper button {
+  max-width: 50%;
+  align-self: center;
+  background-color: #01579b;
+  border: 2px solid #01579b;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 10px;
+  margin: 20px 0px;
+  color: white;
+}
+.contact-form-wrapper button:hover {
+  transition: 0.5s font-size;
+  font-size: 25px;
+}
 
 .also-wrap {
   display: flex;
