--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,9 @@
 }
 html {
   scroll-behavior: smooth;
+  max-width: 1600px;
+  margin: 0px auto 5px auto;
+  box-shadow: 0px 0px 10px;
 }
 
 body {
@@ -391,6 +394,13 @@ nav {
 }
 
 /*Contact section ends*/
+
+@media screen and (max-width: 1539px) {
+  html {
+    margin: none;
+    box-shadow: none;
+  }
+}
 
 @media screen and (max-width: 1030px) {
   .about-me {
