--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,275 +1,274 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
 }
 html {
-  scroll-behavior: smooth;
-  margin: 0px auto 5px auto;
-  max-width: 90%;
-
-  box-shadow: 0px 0px 10px;
+	scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  margin: 0px 5px;
+	font-family: 'Poppins', sans-serif;
+	margin: 0px 5px;
+	max-width: 1440px;
+	margin: 0px auto 5px auto;
+	box-shadow: 0px 0px 10px;
 }
 
 button {
-  font-family: "Poppins", sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  background: url("./assets/Wide-Minimalistic-Landscape-3840x1080-wallpaper.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  height: 40vh;
-  color: white;
-  z-index: 1;
-  position: relative;
-  flex-wrap: wrap;
+	display: flex;
+	flex-direction: column;
+	background: url('./assets/Wide-Minimalistic-Landscape-3840x1080-wallpaper.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: top center;
+	height: 40vh;
+	color: white;
+	z-index: 1;
+	position: relative;
+	flex-wrap: wrap;
 }
 
 .header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 0%;
-  background-color: orange;
-  opacity: 0.1;
-  z-index: -1;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 0%;
+	background-color: orange;
+	opacity: 0.1;
+	z-index: -1;
 }
 
 nav {
-  flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 
 .nav-links {
-  display: flex;
-  list-style: none;
-  flex-basis: 50%;
-  max-width: 500px;
-  margin: 0 auto;
-  padding: 10px;
-  justify-content: space-evenly;
-  align-items: center;
-  border-bottom: 2px solid;
-  border-image-source: linear-gradient(to right, #654ea3, rgb(251, 221, 123));
-  border-image-slice: 1;
+	display: flex;
+	list-style: none;
+	flex-basis: 50%;
+	max-width: 500px;
+	margin: 0 auto;
+	padding: 10px;
+	justify-content: space-evenly;
+	align-items: center;
+	border-bottom: 2px solid;
+	border-image-source: linear-gradient(to right, #654ea3, rgb(251, 221, 123));
+	border-image-slice: 1;
 }
 
 .nav-link {
-  color: white;
+	color: white;
 }
 
 .nav-link:hover {
-  text-decoration: underline;
-  text-underline-offset: 10px;
-  text-decoration-color: rgba(234, 175, 200, 1);
+	text-decoration: underline;
+	text-underline-offset: 10px;
+	text-decoration-color: rgba(234, 175, 200, 1);
 
-  animation: fade-in-underline ease 0.5s;
+	animation: fade-in-underline ease 0.5s;
 }
 
 .introduction {
-  flex: 2 1 auto;
+	flex: 2 1 auto;
 }
 .intro-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
 }
 .intro-text div {
-  flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 .intro-text div h1 {
-  font-size: 50px;
-  font-weight: 500;
-  letter-spacing: 5px;
-  position: relative;
-  color: transparent;
-  animation: text-reveal 0.5s ease forwards;
-  animation-delay: 1.5s;
+	font-size: 50px;
+	font-weight: 500;
+	letter-spacing: 5px;
+	position: relative;
+	color: transparent;
+	animation: text-reveal 0.5s ease forwards;
+	animation-delay: 1.5s;
 }
 .intro-text div h1 span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 0%;
-  animation: text-reveal-box 1s ease;
-  animation-delay: 1s;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 0%;
+	animation: text-reveal-box 1s ease;
+	animation-delay: 1s;
 }
 .introduction div {
-  flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 
 .introduction div p {
-  font-size: 25px;
-  font-weight: 400;
-  position: relative;
-  color: transparent;
-  animation: text-reveal 0.5s ease forwards;
-  animation-delay: 2.5s;
+	font-size: 25px;
+	font-weight: 400;
+	position: relative;
+	color: transparent;
+	animation: text-reveal 0.5s ease forwards;
+	animation-delay: 2.5s;
 }
 .intro-text p span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 0%;
-  background-color: orange;
-  animation: text-reveal-box 1s ease;
-  animation-delay: 2s;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 0%;
+	background-color: orange;
+	animation: text-reveal-box 1s ease;
+	animation-delay: 2s;
 }
 
 .about-me {
-  width: 80%;
-  margin: 50px auto;
-  display: flex;
+	width: 80%;
+	margin: 50px auto;
+	display: flex;
 }
 .my-pic {
-  margin: 0px 10px 0 10px;
-  align-self: center;
+	margin: 0px 10px 0 10px;
+	align-self: center;
 }
 
 .image-wrapper {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  border-radius: 50%;
-  object-fit: contain;
+	width: 200px;
+	height: 200px;
+	overflow: hidden;
+	border-radius: 50%;
+	object-fit: contain;
 }
 
 .image-wrapper img {
-  width: auto;
-  height: 100%;
-  margin-left: -20px;
+	width: auto;
+	height: 100%;
+	margin-left: -20px;
 }
 
 .about-me-details {
-  margin-left: 20px;
-  display: flex;
-  flex-direction: column;
+	margin-left: 20px;
+	display: flex;
+	flex-direction: column;
 }
 .about-me-details h1 {
-  font-family: "Ubuntu", sans-serif;
-  justify-content: center;
-  font-size: 40px;
+	font-family: 'Ubuntu', sans-serif;
+	justify-content: center;
+	font-size: 40px;
 }
 .about-me-details p {
-  font-size: 20px;
-  letter-spacing: 2px;
-  color: #838383;
+	font-size: 20px;
+	letter-spacing: 2px;
+	color: #838383;
 }
 /*Resume section*/
 #resume .resume-wrapper {
-  min-height: 10vh;
-  flex-basis: 60%;
-  max-width: 500px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #01579b;
-  margin: 50px auto;
+	min-height: 10vh;
+	flex-basis: 60%;
+	max-width: 500px;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid #01579b;
+	margin: 50px auto;
 }
 
 #resume .resume-title {
-  width: 100%;
-  height: 100%;
-  opacity: 0.9;
+	width: 100%;
+	height: 100%;
+	opacity: 0.9;
 }
 
 #resume:hover .resume-title {
-  opacity: 1;
+	opacity: 1;
 }
 #resume h1 {
-  font-size: 25px;
-  letter-spacing: 3px;
-  background-color: #01579b;
+	font-size: 25px;
+	letter-spacing: 3px;
+	background-color: #01579b;
 
-  color: white;
-  text-align: center;
-  padding: 20px 0px;
+	color: white;
+	text-align: center;
+	padding: 20px 0px;
 }
 #resume img {
-  margin: 10px;
-  height: 100px;
-  width: 100px;
+	margin: 10px;
+	height: 100px;
+	width: 100px;
 }
 /*End resume section*/
 
 /* Projects start */
 
 #projects .projects {
-  min-height: 95vh;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin: 25px auto;
-  flex-direction: column;
-  text-align: center;
+	min-height: 95vh;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	margin: 25px auto;
+	flex-direction: column;
+	text-align: center;
 }
 #projects .project-header {
-  margin-top: 0px;
+	margin-top: 0px;
 }
 
 #projects h1 {
-  font-size: 40px;
-  text-transform: capitalize;
-  margin-bottom: 20px;
-  letter-spacing: 1.5px;
+	font-size: 40px;
+	text-transform: capitalize;
+	margin-bottom: 20px;
+	letter-spacing: 1.5px;
 }
 #projects .project-item-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 #projects .project-item {
-  flex-basis: 80%;
-  max-width: 612px;
-  min-height: 380px;
+	flex-basis: 80%;
+	max-width: 612px;
+	min-height: 380px;
 
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-  padding: 30px;
-  border-radius: 10px;
-  /* background-image: url("./assets/project-item-bg3.jpg");
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	padding: 30px;
+	border-radius: 10px;
+	/* background-image: url("./assets/project-item-bg3.jpg");
   background-size: cover;
   background-position: center; 
     z-index: 1;
 */
-  background-color: #fafafa;
-  border: 1px solid #01579b;
-  margin: 10px 5%;
-  color: black;
-  position: relative;
-  overflow: hidden;
+	background-color: #fafafa;
+	border: 1px solid #01579b;
+	margin: 10px 5%;
+	color: black;
+	position: relative;
+	overflow: hidden;
 }
 
 #projects .project-item:hover {
-  transition: background-color 0.5s, color 0.5s;
-  transition-timing-function: ease;
-  background-color: #01579b;
-  color: white;
+	transition: background-color 0.5s, color 0.5s;
+	transition-timing-function: ease;
+	background-color: #01579b;
+	color: white;
 }
 
 #projects p {
-  text-align: left;
+	text-align: left;
 }
 
 /* #projects .project-item::after {
@@ -285,266 +284,266 @@ nav {
 } */
 
 #projects h2 {
-  font-size: 28px;
-  text-transform: capitalize;
-  margin-bottom: 15px;
+	font-size: 28px;
+	text-transform: capitalize;
+	margin-bottom: 15px;
 }
 
 #projects p {
-  margin-bottom: 20px;
-  font-size: 17px;
-  line-height: 23px;
-  letter-spacing: 1.5px;
+	margin-bottom: 20px;
+	font-size: 17px;
+	line-height: 23px;
+	letter-spacing: 1.5px;
 }
 
 /*End Project section*/
 
 /* Contact section */
 #contact {
-  margin: 50px auto;
+	margin: 50px auto;
 }
 
 .contact-header h1 {
-  font-size: 40px;
-  text-transform: capitalize;
-  margin-bottom: 20px;
-  letter-spacing: 1.5px;
+	font-size: 40px;
+	text-transform: capitalize;
+	margin-bottom: 20px;
+	letter-spacing: 1.5px;
 }
 .contact-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 .contact-wrapper p {
-  vertical-align: middle;
-  font-size: 20px;
+	vertical-align: middle;
+	font-size: 20px;
 }
 
 .icon {
-  width: auto;
-  height: 50px;
+	width: auto;
+	height: 50px;
 }
 
 .contact-form-wrapper {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  flex-basis: 80%;
-  max-width: 800px;
-  min-height: 600px;
-  padding: 30px;
-  border-radius: 10px;
-  background-color: #fafafa;
-  border: 1px solid #01579b;
-  margin: 10px auto;
-  color: black;
-  position: relative;
-  overflow: hidden;
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	flex-basis: 80%;
+	max-width: 800px;
+	min-height: 600px;
+	padding: 30px;
+	border-radius: 10px;
+	background-color: #fafafa;
+	border: 1px solid #01579b;
+	margin: 10px auto;
+	color: black;
+	position: relative;
+	overflow: hidden;
 }
 
 .contact-form-wrapper h1 {
-  text-transform: capitalize;
-  margin-bottom: 10px;
+	text-transform: capitalize;
+	margin-bottom: 10px;
 }
 
 .contact-form-wrapper form {
-  display: flex;
-  flex-direction: column;
-  align-self: flex-start;
-  flex-wrap: wrap;
+	display: flex;
+	flex-direction: column;
+	align-self: flex-start;
+	flex-wrap: wrap;
 }
 .contact-form-wrapper .row {
-  display: flex;
-  flex-direction: column;
-  align-self: flex-start;
-  flex-wrap: wrap;
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-self: flex-start;
+	flex-wrap: wrap;
+	width: 100%;
 }
 
 .contact-form-wrapper input,
 .contact-form-wrapper textarea {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
 .contact-form-wrapper button {
-  max-width: 50%;
-  align-self: center;
-  background-color: #01579b;
-  border: 2px solid #01579b;
-  border-radius: 10px;
-  font-size: 15px;
-  padding: 10px;
-  margin: 20px 0px;
-  color: white;
+	max-width: 50%;
+	align-self: center;
+	background-color: #01579b;
+	border: 2px solid #01579b;
+	border-radius: 10px;
+	font-size: 15px;
+	padding: 10px;
+	margin: 20px 0px;
+	color: white;
 }
 .contact-form-wrapper button:hover {
-  transition: 0.5s font-size;
-  font-size: 17px;
+	transition: 0.5s font-size;
+	font-size: 17px;
 }
 
 .also-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 /*Contact section ends*/
 @media screen and (max-width: 1030px) {
-  .about-me {
-    width: 95%;
-    margin: 50px auto;
-  }
+	.about-me {
+		width: 95%;
+		margin: 50px auto;
+	}
 }
 
 @media screen and (max-width: 1020px) {
-  .about-me {
-    width: 100%;
-    margin: 25px auto;
-  }
+	.about-me {
+		width: 100%;
+		margin: 25px auto;
+	}
 
-  .header {
-    height: 40vh;
-    background-size: cover;
-    background-position: center;
-    /* 
+	.header {
+		height: 40vh;
+		background-size: cover;
+		background-position: center;
+		/* 
     background: none;
     background-color: rgb(64, 176, 189); */
-  }
+	}
 }
 @media screen and (max-width: 694px) {
-  .about-me {
-    flex-direction: column;
-  }
-  .about-me-details {
-    align-items: center;
-  }
-  .my-pic {
-    margin: 10px;
-  }
-  .about-me-details h1 {
-    margin-top: 0;
-  }
-  .about-me-details p {
-    font-size: 18px;
-    text-align: justify;
-  }
-  html {
-    margin: none;
-    box-shadow: none;
-    max-width: 100%;
-  }
+	.about-me {
+		flex-direction: column;
+	}
+	.about-me-details {
+		align-items: center;
+	}
+	.my-pic {
+		margin: 10px;
+	}
+	.about-me-details h1 {
+		margin-top: 0;
+	}
+	.about-me-details p {
+		font-size: 18px;
+		text-align: justify;
+	}
+	html {
+		margin: none;
+		box-shadow: none;
+		max-width: 100%;
+	}
 }
 
 @media screen and (max-width: 474px) {
-  .about-me-details p {
-    text-align: start;
-  }
+	.about-me-details p {
+		text-align: start;
+	}
 }
 
 @media screen and (max-width: 364px) {
-  .nav-links {
-    font-size: 10px;
-  }
-  .intro-text {
-    margin-top: 20px;
-  }
-  .header {
-    height: 30vh;
-  }
-  .intro-text div h1 {
-    font-size: 30px;
-    height: fit-content;
-  }
-  .intro-text p {
-    font-size: 16px;
-    height: fit-content;
-  }
+	.nav-links {
+		font-size: 10px;
+	}
+	.intro-text {
+		margin-top: 20px;
+	}
+	.header {
+		height: 30vh;
+	}
+	.intro-text div h1 {
+		font-size: 30px;
+		height: fit-content;
+	}
+	.intro-text p {
+		font-size: 16px;
+		height: fit-content;
+	}
 }
 
 #snackbar {
-  visibility: hidden;
-  min-width: 250px;
-  margin-left: -125px;
-  background-color: lightblue;
-  color: black;
-  text-align: center;
-  border-radius: 2px;
-  padding: 16px;
-  position: fixed;
-  z-index: 1;
-  left: 50%;
-  bottom: 30px;
-  font-size: 17px;
+	visibility: hidden;
+	min-width: 250px;
+	margin-left: -125px;
+	background-color: lightblue;
+	color: black;
+	text-align: center;
+	border-radius: 2px;
+	padding: 16px;
+	position: fixed;
+	z-index: 1;
+	left: 50%;
+	bottom: 30px;
+	font-size: 17px;
 }
 
 @keyframes fade-in-img {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 @keyframes fade-in-underline {
-  0% {
-    text-decoration-color: rgba(234, 175, 200, 0);
-  }
-  100% {
-    text-decoration-color: rgba(234, 175, 200, 1);
-  }
+	0% {
+		text-decoration-color: rgba(234, 175, 200, 0);
+	}
+	100% {
+		text-decoration-color: rgba(234, 175, 200, 1);
+	}
 }
 
 #snackbar.show {
-  visibility: visible;
-  animation: fadein 0.5s, fadeout 0.5s 2.25s;
+	visibility: visible;
+	animation: fadein 0.5s, fadeout 0.5s 2.25s;
 }
 
 @keyframes fadein {
-  from {
-    bottom: 0;
-    opacity: 0;
-  }
-  to {
-    bottom: 30px;
-    opacity: 1;
-  }
+	from {
+		bottom: 0;
+		opacity: 0;
+	}
+	to {
+		bottom: 30px;
+		opacity: 1;
+	}
 }
 
 @keyframes fadeout {
-  from {
-    bottom: 30px;
-    opacity: 1;
-  }
-  to {
-    bottom: 0;
-    opacity: 0;
-  }
+	from {
+		bottom: 30px;
+		opacity: 1;
+	}
+	to {
+		bottom: 0;
+		opacity: 0;
+	}
 }
 
 @keyframes text-reveal-box {
-  50% {
-    width: 100%;
-    left: 0;
-    background-color: rgb(251, 221, 123);
-  }
+	50% {
+		width: 100%;
+		left: 0;
+		background-color: rgb(251, 221, 123);
+	}
 
-  100% {
-    width: 0;
-    left: 100%;
-    background-color: #654ea3;
-  }
+	100% {
+		width: 0;
+		left: 100%;
+		background-color: #654ea3;
+	}
 }
 
 @keyframes text-reveal {
-  100% {
-    text-shadow: 2px 2px 10px black;
-    color: white;
-  }
+	100% {
+		text-shadow: 2px 2px 10px black;
+		color: white;
+	}
 }
