--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@
 }
 html {
 	scroll-behavior: smooth;
+	background-color: black;
 }
 
 body {
@@ -12,6 +13,8 @@ body {
 	margin: 0px 5px;
 	max-width: 1440px;
 	margin: 0px auto 5px auto;
+	color: #CCCCCC;
+	background-color: #101010;
 	box-shadow: 0px 0px 10px;
 }
 
@@ -136,12 +139,13 @@ nav {
 	width: 80%;
 	margin: 50px auto;
 	display: flex;
+	background-color:#404040 ;
+	border-radius:40px ;
 }
 .my-pic {
-	margin: 0px 10px 0 10px;
+	margin:50px;
 	align-self: center;
 }
-
 .image-wrapper {
 	width: 200px;
 	height: 200px;
@@ -157,7 +161,7 @@ nav {
 }
 
 .about-me-details {
-	margin-left: 20px;
+	margin: 50px;
 	display: flex;
 	flex-direction: column;
 }
@@ -169,7 +173,6 @@ nav {
 .about-me-details p {
 	font-size: 20px;
 	letter-spacing: 2px;
-	color: #838383;
 }
 #resume {
 	display: flex;
@@ -186,12 +189,12 @@ nav {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	border: 1px solid #01579b;
+	background-color: #C395FF;
+	border-radius: 20px;
 }
 
 #resume .resume-title {
-	width: 100%;
-	height: 100%;
+	border-radius: 20px 20px 0px 0px;
 	opacity: 0.9;
 }
 
@@ -199,11 +202,11 @@ nav {
 	opacity: 1;
 }
 #resume h1 {
+	text-transform: uppercase;
 	font-size: 25px;
 	letter-spacing: 3px;
-	background-color: #01579b;
-
-	color: white;
+	border-radius: inherit;
+	color: black;
 	text-align: center;
 	padding: 20px 0px;
 }
@@ -224,6 +227,10 @@ nav {
 	margin: 25px auto;
 	flex-direction: column;
 	text-align: center;
+}
+#projects a{
+	color:whitesmoke;
+	text-decoration: underline;
 }
 #projects .project-header {
 	margin-top: 0px;
@@ -257,23 +264,22 @@ nav {
   background-position: center; 
     z-index: 1;
 */
-	background-color: #fafafa;
-	border: 1px solid #01579b;
+	background-color: #404040;
 	margin: 10px 5%;
-	color: black;
+	color: whitesmoke;
 	position: relative;
 	overflow: hidden;
+	opacity: 0.8;
 }
 
 #projects .project-item:hover {
 	transition: background-color 0.5s, color 0.5s;
 	transition-timing-function: ease;
-	background-color: #01579b;
 	color: white;
+	opacity: 1;
 }
 
 #projects .project-item:hover a{
-	transition: color 0.5s;
 	color: yellow;
 	text-decoration: underline yellow;
 }
@@ -346,10 +352,10 @@ nav {
 	min-height: 600px;
 	padding: 30px;
 	border-radius: 10px;
-	background-color: #fafafa;
+	background-color: #404040;
 	border: 1px solid #01579b;
 	margin: 10px auto;
-	color: black;
+	color: whitesmoke;
 	position: relative;
 	overflow: hidden;
 }
@@ -381,17 +387,21 @@ nav {
 	display: inline-block;
 	border: 1px solid #ccc;
 	border-radius: 4px;
+	background-color: #eee;
 }
 .contact-form-wrapper button {
 	max-width: 50%;
 	align-self: center;
-	background-color: #01579b;
-	border: 2px solid #01579b;
+	background-color: #C395FF;
+	border: 2px solid #C395FF;
 	border-radius: 10px;
 	font-size: 15px;
 	padding: 10px;
 	margin: 20px 0px;
-	color: white;
+	color: black;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
 .contact-form-wrapper button:hover {
 	transition: 0.5s font-size;
