--- a/stylesheet.css
+++ b/stylesheet.css
@@ -424,7 +424,7 @@ nav {
 
 @media screen and (max-width: 1020px) {
 	.about-me {
-		width: 100%;
+		width: 95%;
 		margin: 25px auto;
 	}
 
@@ -481,10 +481,20 @@ nav {
 		font-size: 30px;
 		height: fit-content;
 	}
-	.intro-text p {
-		font-size: 16px;
+	.introduction div p {
+		font-size: 10px;
 		height: fit-content;
+		text-align: center;
 	}
+	.about-me-details p {
+		font-size: 16px;
+		text-align: start;
+	}
+	.contact-wrapper{
+		width:95%;
+		margin:2px auto;
+	}
+	
 }
 
 #snackbar {
